added getOuterHTMLTree(WebLocator webLocator)